app/assets/stylesheets/modules/blacklight_overrides.scss
.facets-heading {
  @extend .h3;
  @include heading-with-border();
}

.facets-header {
  padding: $padding-base-vertical 0;
}

.constraints-container {
  background-color: transparent;
  border: 0;
  box-shadow: none;
  padding: $padding-base-vertical 0;
}

.blacklight-catalog-show {
  #content {
    width: 100%;
  }

  #sidebar {
    display: none;
  }

  .dl-horizontal {
    float: none;
    margin-top: 2 * $padding-large-vertical;
    width: 85ch;
  }
}

.thumbnail {
  border: 0;
}

#document {
  h1 {
    font-size: $h3-font-size;
  }
}

.document-thumbnail img {
  max-height: 200px;
  max-width: 100%;
}

#documents {
  .index_title {
    font-size: $font-size-lg;
    margin-top: 0;
  }

  .thumbnail,
  .document-thumbnail {
    img {
      @include thumbnail-image-border;
    }
  }

  &.documents-list {
    .document {
      box-sizing: content-box;
      min-height: 100px;
      padding-bottom: $padding-large-vertical;
      padding-top: $padding-large-vertical;
    }

    .document-counter {
      display: none;
    }

    .document-metadata {
      @extend .col-8;
      @extend .col-md-9;
      @extend .offset-3;
      @extend .offset-md-2;
    }

    .document-thumbnail {
      float: none;
      height: 0;
      margin: 0;
      padding: 0;
    }
  }

  &.gallery {
    .thumbnail {
      border: 0;
    }
  }
}

dt.blacklight-geographic_srpt {
  display: none;
}

dd.blacklight-geographic_srpt {
  margin-left: 0;
}

